<resources>
    <string name="app_name">MatrixTrader</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="symbol">Menkul</string>
    <string name="quantity">Miktar</string>
    <string name="price">Fiyat</string>
    <string name="amount">Tutar</string>
    <string name="total_amount">Toplam Tutar: </string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="ok">Tamam</string>
    <string name="warning">Uyarı</string>
    <string name="statement_of_account">Hesap Özeti</string>
</resources>
