<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/loginImageView"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/logo"
        android:scaleType="fitXY"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/userNameEditText"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:padding="10dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:background="@drawable/frame_edittext"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/loginButton"
            style="@style/BlackButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</RelativeLayout>